# Graph-RAG

./: .env  .gitignore  graph.m.ipynb  graph.mm.ipynb  pyproject.toml  requirements.txt  test.py
.deepeval/: .deepeval_telemetry.txt  .latest_test_run.json  .temp-deepeval-cache.json  .temp_test_run_data.json
miscellaneous/: neo4j_query_table_data_index 2026-5-9.json
src/: New_Code.py  bertscore.py  config.py  data_loader.py  graph_2.py  graph_DeepEval_2.py  graph_bertscore_eval_2.py  graph_builder.py  graph_pipeline.py  graph_pipeline_2.py  graph_query.py  graph_query_2.py  graph_rag_pipeline_2.py  graph_rag_query_2.py  graph_utils.py  graph_utils_2.py  main.py  search.py  setup_vector_index_2.py
src/results/: evaluation_summary.json
src/results_final/gpt-oss/: evaluation_summary_Answer Relevancy.json  evaluation_summary_Contextual Recall.json  evaluation_summary_Faithfulness.json
